fixed some styling issues on small devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,12 @@ body {
 
 /* header styling */
 
+header > * {
+    padding-left: 50px;
+    padding-top: 50px;
+}
+
+
 .introduction {
     background-color: #214358;
     color: #b9c6df;
@@ -25,7 +31,6 @@ body {
 #portrait {
     width: 100%;
     height: 150px;
-    margin: 50px 10px;
     border-radius: 6px;
     border-style: outset;
     display: flex;
@@ -55,17 +60,12 @@ body {
     padding: 5px;
 }
 
-header > * {
-    padding-left: 50px;
-}
-
 .menu {
     margin: 0;
     padding: 0 5px 0 5px;
     text-decoration: none;
     display: flex;
     justify-content: flex-start;
-
 }
 
 .menu li {
@@ -92,6 +92,10 @@ header > * {
 
 #active {
     text-decoration: underline;
+}
+
+.navigation {
+    padding: 0;
 }
 
 /* hero image styling */
@@ -159,7 +163,7 @@ footer {
     background-color: #214358;
     display: flex;
     align-items: center;
-    height: 100px;
+    height: 150px;
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -308,6 +312,11 @@ a > i {
         height: 200px;
         margin: 30px 40px;
     }
+
+    header > * {
+        padding-left: 20px;
+        padding-top: 20px;
+    }
 }
 
 
@@ -322,6 +331,11 @@ a > i {
         justify-content: center;
         max-width: 1200px;
         margin: 0 auto;
+    }
+
+    header > * {
+        padding-left: 50px;
+        padding-top: 50px;
     }
 
     .main-content-work-history {
